# rust-gpu-shadertoys

./: .gitattributes  .gitignore  Cargo.toml  build.rs  rustfmt.toml
example_shaders/: Cargo.toml
example_shaders/src/: lib.rs  shader_infra.rs  shader_prelude.rs
example_shaders/src/shaders/: 1_test.rs  a_lot_of_spheres.rs  a_question_of_time.rs  apollonian.rs  bubble_buckey_balls.rs  clouds.rs  geodesic_tiling.rs  heart.rs  luminescence.rs  mod.rs  morphing_teapot.rs  phantom_star.rs  playing_marble.rs  raymarching_primitives.rs  seascape.rs  skyline.rs  tileable_water_caustic.rs  tokyo.rs  voxel_pac_man.rs
portable_shader/: Cargo.toml
portable_shader-types/: Cargo.toml
portable_shader-types/src/: buffer_packer.rs  lib.rs  shader_constants.rs  shader_definition.rs
shader_loading/: Cargo.toml
shader_loading/src/: buffered_reader.rs  compressed_reader.rs  compressed_writer.rs  lib.rs  tar_constants.rs  tar_gz_create.rs  tar_gz_extract.rs
shader_loading/src/tar_test/: create_archives.bash  mod.rs  test-gnu.tar  test-pax.tar  test-ustar.tar  test-v7.tar
shader_loading/src/tar_test/test-archive/: lorem.txt
shader_loading/src/tar_test/test-archive/subfolder/: my_file.txt
shaders/: Cargo.toml
shaders/src/: lib.rs  shader_infra.rs  shader_prelude.rs  shader_std.rs  shared_data.rs
shaders/src/shaders/: a_lot_of_spheres.rs  a_question_of_time.rs  apollonian.rs  atmosphere_system_test.rs  bubble_buckey_balls.rs  clouds.rs  filtering_procedurals.rs  flappy_bird.rs  galaxy_of_universes.rs  geodesic_tiling.rs  heart.rs  loading_repeating_circles.rs  luminescence.rs  mandelbrot_smooth.rs  miracle_snowflakes.rs  mod.rs  morphing.rs  moving_square.rs  on_off_spikes.rs  phantom_star.rs  playing_marble.rs  protean_clouds.rs  raymarching_primitives.rs  seascape.rs  skyline.rs  soft_shadow_variation.rs  tileable_water_caustic.rs  tokyo.rs  two_tweets.rs  voxel_pac_man.rs
shared_with_gpu/: Cargo.toml
shared_with_gpu/src/: shader_definition.rs
src/: iced_grid.rs  iced_shader.rs  main.rs  shader_widget.rs
