[package]
name = "shadertoys-wgpu"
version = "0.0.0"
publish = false
authors = []
edition = "2021"

[features]
default = ["use-compiled-tools"]
#use-installed-tools = ["spirv-builder/use-installed-tools"]
use-compiled-tools = ["spirv-builder/use-compiled-tools"]

[dependencies]
shared_with_gpu.workspace = true
clap = { version = "4.5", features = ["cargo"] }
futures = { version = "0.3", default-features = false, features = [
    "std",
    "executor",
] }
wgpu.workspace = true
winit = "0.30.11"
bytemuck.workspace = true
iced_widget.workspace = true
iced_core.workspace = true
iced_runtime.workspace = true
iced_wgpu.workspace = true
iced_winit.workspace = true
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing = { version = "0.1.41", features = ["std"] }
ouroboros = "0.18.5"

[build-dependencies]
spirv-builder.workspace = true
shadertoys-shaders = { workspace = true, features = ["cpu_definition_export"] }
serde_json = { version = "1.0.140", features = ["std"] }
#TODO: rm
flate2.workspace = true
tar = { version = "0.4" }

[workspace]
members = ["shaders", "shared_with_gpu", "shader_loading"]

[workspace.dependencies]
shadertoys-shaders = { path = "shaders" }
shared_with_gpu = { path = "shared_with_gpu" }
serde = { version = "1.0.219" }
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "0b37696e9f5edde8fa0c1363a88e6c8cb8e6ff68", default-features = false }
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "0b37696e9f5edde8fa0c1363a88e6c8cb8e6ff68" }
bytemuck = { version = "1.23.1", features = ["derive"] }
# must use wgpu version that iced uses
wgpu = { version = "0.19.4", features = ["spirv", "vulkan-portability"] }
# https://github.com/iced-rs/iced/blob/master/Cargo.toml
iced_widget = { version = "0.13.4", default-features = false, features = [
    "wgpu",
] }
iced_runtime = { version = "0.13.2", default-features = false, features = [
    "debug",
] }
iced_core = { version = "0.13.1", default-features = false, features = [
    "auto-detect-theme",
] }
iced_wgpu = { version = "0.13.0", default-features = false }
iced_winit = { version = "0.13.0", default-features = false }
flate2 = { version = "1.1.2", default-features = false, features = [
    "miniz_oxide",
] }

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
opt-level = 3
codegen-units = 16

# HACK(eddyb) also compile debug mode's build-dependencies with optimizations,
# because otherwise `rustc_codegen_spirv` (esspecially its linker) is too slow.
# Also `spirv-opt` *alone* takes (just) over an hour to run, though this only
# brings it down only to 10 minutes, so I've disabled it below, for now.
[profile.dev.build-override]
opt-level = 3

# HACK(eddyb) don't optimize the shader crate, to avoid `spirv-opt` taking
# a long time (10 minutes if itself was optimized, over an hour otherwise).
[profile.release.package."shadertoys-shaders"]
opt-level = 0

[workspace.lints.clippy]
# disabled because shader code does this often
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
excessive_precision = "allow"
missing_const_for_fn = "allow"
many_single_char_names = "allow"
similar_names = "allow"
too_many_arguments = "allow"
suboptimal_flops = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
# disabled because of rust gpu limitatoins
manual_range_contains = "allow" # Rust gpu does not like the core range checks
needless_range_loop = "allow"   # Rust gpu does not like iterators very much
manual_swap = "allow"           # Rust gpu does not like the core swap function
# temporarily disabled rules
inline_always = "allow"                # need some hard numbers for this
unreadable_literal = "allow"           # Maybe fix this?
useless_let_if_seq = "allow"           # Maybe fix this?
used_underscore_items = "allow"        # Maybe fix this?
no_effect_underscore_binding = "allow" # Maybe fix this?

# standard rules for idiomatic Rust code
let_and_return = "allow"
needless_lifetimes = "allow"
option_if_let_else = "allow"
# see: https://github.com/bevyengine/bevy/pull/15375#issuecomment-2366966219
too_long_first_doc_paragraph = "allow"
missing_panics_doc = "allow"
doc-markdown = "allow"

nursery = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
nonstandard-style = "warn"
future-incompatible = "warn"
missing_docs = "allow" # TODO: warn
unused = { priority = -1, level = "warn" }
rust_2018_idioms = { priority = -1, level = "warn" }
rust-2024-compatibility = "warn"
array-into-iter = "warn"
bare-trait-objects = "warn"
ellipsis-inclusive-range-patterns = "warn"
non-fmt-panics = "warn"
explicit-outlives-requirements = "warn"
unused-extern-crates = "warn"
unsafe_code = "allow" # TODO: forbid
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(target_arch, values("spirv"))',
] }
