[package]
name = "example_shaders"
version = "0.0.0"
publish = false
authors = []
edition = "2021"

[lib]
crate-type = ["dylib"]

[features]
# Actual shader code is only emitted if this feature is enabled.
shader_code = []
# If this feature is enabled, code is generated to export the shader definitions.
cpu_definition_export = ["portable_shader-types/cpu_definition_export"]

[dependencies]
spirv-std.workspace = true
bytemuck.workspace = true
portable_shader-types.workspace = true

[lints]
workspace = true
