[package]
name = "shader_loading"
version = "0.0.0"
authors = []
edition = "2021"

[dependencies]
shared_with_gpu.workspace = true
miniz_oxide = { version = "0.8.9", default-features = false, features = [
  "with-alloc",
] }
hashbrown = "0.15.4"
thiserror = { version = "2.0.12", default-features = false }

[lints]
workspace = true
