[package]
name = "shadertoys-shaders"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["dylib"]

[features]
cpu = ["dep:wgpu", "dep:iced"]

[dependencies]
spirv-std.workspace = true
bytemuck.workspace = true
wgpu = { workspace = true, optional = true }
iced = { workspace = true, optional = true }

[lints]
workspace = true
