[package]
name = "shadertoys-shaders"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["dylib"]

[features]
# Actual shader code is only emitted if this feature is enabled.
shader_code = []
# If this feature is enabled, code is generated to export the shader definitions.
cpu_definition_export = ["shared_with_gpu/cpu_definition_export"]

[dependencies]
spirv-std.workspace = true
bytemuck.workspace = true
shared_with_gpu.workspace = true

[lints]
workspace = true
